--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>World Editor</h1>
+    <!-- Canvas Project setup -->
     <canvas id="myCanvas"></canvas>
 
     <script src="js/math/graph.js"></script>
