--- a/index.html
+++ b/index.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Self Driving Car in a Virtual World</title>
     <link rel="stylesheet" href="/css/style.css" />
-    </head>
-    <body>
+  </head>
+  <body>
     <h1>World Editor</h1>
-    <!-- Canvas Project setup -->
     <canvas id="myCanvas"></canvas>
+    <div id="controls"></div>
 
     <script src="js/math/graph.js"></script>
     <script src="js/primitives/point.js"></script>
     <script src="js/primitives/segment.js"></script>
     <script>
-        myCanvas.width = 600;
-        myCanvas.height = 600;
+      myCanvas.width = 600;
+      myCanvas.height = 600;
 
-        const ctx = myCanvas.getContexct("2d");
+      const ctx = myCanvas.getContext("2d");
 
-        const p1 = new Point(200, 200);
-        const p2 = new Point(500, 200);
-        const p3 = new Point(400, 400);
-        const p4 = new Point(100, 300);
+      const p1 = new Point(200, 200);
+      const p2 = new Point(500, 200);
+      const p3 = new Point(400, 400);
+      const p4 = new Point(100, 300);
 
-        const graph = new Graph([p1, p2, p3, p4]);
-        graph.draw(ctx);
+      const s1 = new Segment(p1, p2);
+      const s2 = new Segment(p1, p3);
+      const s3 = new Segment(p1, p4);
+      const s4 = new Segment(p2, p3);
+
+      const graph = new Graph([p1, p2, p3, p4], [s1, s2, s3, s4]);
+      graph.draw(ctx);
     </script>
-    </body>
+  </body>
 </html>
