--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Self Driving Car in a Virtual World</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <h1>World Editor</h1>
@@ -25,12 +25,7 @@
       const p3 = new Point(400, 400);
       const p4 = new Point(100, 300);
 
-      const s1 = new Segment(p1, p2);
-      const s2 = new Segment(p1, p3);
-      const s3 = new Segment(p1, p4);
-      const s4 = new Segment(p2, p3);
-
-      const graph = new Graph([p1, p2, p3, p4], [s1, s2, s3, s4]);
+      const graph = new Graph([p1, p2, p3, p4]);
       graph.draw(ctx);
     </script>
   </body>
