--- a/index.html
+++ b/index.html
@@ -3,62 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Self Driving Car in a Virtual World</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <title>World Editor</title>
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
+    <!-- === HEADER SECTION === -->
     <h1>World Editor</h1>
-    <!-- === Create a new Canvas === -->
-    <canvas id="myCanvas"></canvas>
-    <div id="controls">
-      <button onclick="addRandomPoint()">Add Point</button>
-      <button onclick="addRandomSegment()">Add Segment</button>
-    </div>
 
+    <!-- === CANVAS SECTION === -->
+    <canvas id="myCanvas"></canvas>
+    <div id="controls"></div>
+
+    <!-- === JAVASCRIPT IMPORTS === -->
     <script src="js/math/graph.js"></script>
     <script src="js/primitives/point.js"></script>
     <script src="js/primitives/segment.js"></script>
+
+    <!-- === MAIN SCRIPT === -->
     <script>
-      // === add random segment to the graph === //
-      function addRandomSegment() {
-        const index1 = Math.floor(Math.random() * graph.points.length);
-        const index2 = Math.floor(Math.random() * graph.points.length);
-        graph.addSegment(
-          new Segment(graph.points[index1], graph.points[index2])
-        );
-        ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
-        graph.draw(ctx);
-      }
-
-      // === add random point to the graph === //
-      function addRandomPoint() {
-        const success = graph.tryAddPoint(
-          new Point(
-            Math.random() * myCanvas.width,
-            Math.random() * myCanvas.height
-          )
-        );
-        ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
-        graph.draw(ctx);
-        console.log(success);
-      }
-
-      // === Canvas drawing function === //
+      // === CANVAS SETUP ===
       myCanvas.width = 600;
       myCanvas.height = 600;
-
       const ctx = myCanvas.getContext("2d");
 
+      // === POINT CREATION ===
+      // Create four points at different coordinates
       const p1 = new Point(200, 200);
       const p2 = new Point(500, 200);
       const p3 = new Point(400, 400);
       const p4 = new Point(100, 300);
 
+      // === SEGMENT CREATION ===
+      // Create segments connecting the points
       const s1 = new Segment(p1, p2);
       const s2 = new Segment(p1, p3);
       const s3 = new Segment(p1, p4);
       const s4 = new Segment(p2, p3);
 
+      // === GRAPH INITIALIZATION AND DRAWING ===
+      // Create a graph with the points and segments, then draw it
       const graph = new Graph([p1, p2, p3, p4], [s1, s2, s3, s4]);
       graph.draw(ctx);
     </script>
