--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
     <!-- === CANVAS SECTION === -->
     <canvas id="myCanvas"></canvas>
-    <div id="controls"></div>
+    <div id="controls">
+      <button onclick="addRandomPoint()">Add Random Point</button>
+      <button onclick="addRandomSegment()">Add Random Segment</button>
+    </div>
 
     <!-- === JAVASCRIPT IMPORTS === -->
     <script src="js/math/graph.js"></script>
