--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
     <canvas id="myCanvas"></canvas>
     <div id="controls">
       <button onclick="addRandomPoint()">Add Random Point</button>
-      <button onclick="addRandomSegment()">Add Random Segment</button>
+      <button onclick="Segment.addRandomSegment(graph, ctx)">
+        Add Random Segment
+      </button>
     </div>
 
     <!-- === JAVASCRIPT IMPORTS === -->
-    <script src="js/math/graph.js"></script>
     <script src="js/primitives/point.js"></script>
     <script src="js/primitives/segment.js"></script>
+    <script src="js/math/graph.js"></script>
 
     <!-- === MAIN SCRIPT === -->
     <script>
@@ -29,24 +31,28 @@
       myCanvas.height = 600;
       const ctx = myCanvas.getContext("2d");
 
-      // === POINT CREATION ===
-      // Create four points at different coordinates
-      const p1 = new Point(200, 200);
-      const p2 = new Point(500, 200);
-      const p3 = new Point(400, 400);
-      const p4 = new Point(100, 300);
+      // === GRAPH INITIALIZATION ===
+      // Create an empty graph
+      const graph = new Graph();
 
-      // === SEGMENT CREATION ===
-      // Create segments connecting the points
-      const s1 = new Segment(p1, p2);
-      const s2 = new Segment(p1, p3);
-      const s3 = new Segment(p1, p4);
-      const s4 = new Segment(p2, p3);
+      // === BUTTON FUNCTIONS ===
+      function addRandomPoint() {
+        console.log("addRandomPoint called");
+        const newPoint = new Point(
+          Math.random() * myCanvas.width,
+          Math.random() * myCanvas.height
+        );
+        console.log("New point created at:", newPoint.x, newPoint.y);
 
-      // === GRAPH INITIALIZATION AND DRAWING ===
-      // Create a graph with the points and segments, then draw it
-      const graph = new Graph([p1, p2, p3, p4], [s1, s2, s3, s4]);
-      graph.draw(ctx);
+        const success = graph.tryAddPoint(newPoint);
+        console.log("Point addition success:", success);
+
+        if (success) {
+          ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
+          graph.draw(ctx);
+          console.log("Canvas redrawn");
+        }
+      }
     </script>
   </body>
 </html>
